# SkyRoads-Level-Generator

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  prompt.md
crates/skyroads-audio-ref/: Cargo.toml
crates/skyroads-audio-ref/src/: lib.rs
crates/skyroads-cli/: Cargo.toml
crates/skyroads-cli/src/: main.rs
crates/skyroads-core/: Cargo.toml
crates/skyroads-core/src/: app.rs  gameplay.rs  lib.rs
crates/skyroads-data/: Cargo.toml
crates/skyroads-data/src/: cfg.rs  compression.rs  dashboard.rs  demo.rs  error.rs  exe.rs  image.rs  level.rs  lib.rs  muzax.rs  roads.rs  shipped_runtime_tables.rs  sound.rs  trekdat.rs
crates/skyroads-renderer-ref/: Cargo.toml
crates/skyroads-renderer-ref/src/: lib.rs
crates/skyroads-sdl/: Cargo.toml  build.rs
crates/skyroads-sdl/src/: main.rs  sdl.rs
docs/: port-architecture.md  reverse-engineering.md
plan/: close_dos_gameplay_renderer_gap.md
tools/: skyroads_dos_oracle.py  skyroads_dosbox_trace.py  skyroads_extract.py  test_skyroads_dos_oracle.py
